--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
       </a>
     </section>
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
+    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.js"></script>
     <script>
       window.onload = function() {
         new Masonry('body', {
